po: update po/es_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/common-base.po
+++ b/po/es_ES/common-base.po
@@ -42,7 +42,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-25 11:18+0000\n"
+"PO-Revision-Date: 2016-08-26 16:11+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -26392,178 +26392,178 @@ msgstr "Provee un reporte detallado de la lista su teléfono / recorrido para lo
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pledge Detail Report"
-msgstr ""
+msgstr "Reporte de detalle del compromiso"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
 "List of pledges including amount pledged, pledge status, next payment date, "
 "balance due, total amount paid etc."
-msgstr ""
+msgstr "Lista de compromisos incluyendo la cantidad comprometida, el estado del compromiso, la próxima fecha de pago, saldo actual, la cantidad total abonada, etc."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Activity Summary Report"
-msgstr ""
+msgstr "Reporte de resumen de actividad"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Mail Click-Through Report"
-msgstr ""
+msgstr "Informe de enlaces visitados -Clickthrough- por correo"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
 "Groups and totals pledges by criteria including contact, time period, pledge"
 " status, location, etc."
-msgstr ""
+msgstr "Agrupa y suma compromisos totales por criterios como contacto, período de tiempo, estado del compromiso, ubicación, etc."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Recurring Contributions Summary"
-msgstr ""
+msgstr "Resumen de contribuciones recurrentes"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
 "Provides simple summary for each payment instrument for which there are "
 "recurring contributions (e.g. Credit Card, Standing Order, Direct Debit, "
 "etc.), showing within a given date range."
-msgstr ""
+msgstr "Ofrece un resumen simplificado para cada instrumento de pago que tiene contribuciones recurrentes (por ej. Tarjeta de crédito, Orden de pago, etc.), dentro de un rango de fechas determinado."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Textarea"
-msgstr ""
+msgstr "Area de Texto"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Credit/Contra Revenue Account is"
-msgstr ""
+msgstr "Cuenta de beneficios / crédito es"
 
 #: xml/templates/civicrm_data.tpl CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Chargeback Account is"
-msgstr ""
+msgstr "Cuenta de devolución es"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This week"
-msgstr ""
+msgstr "Esta semana"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This calendar month"
-msgstr ""
+msgstr "Este mes"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This quarter"
-msgstr ""
+msgstr "Este trimestre"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This fiscal year"
-msgstr ""
+msgstr "Este año fiscal"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This calendar year"
-msgstr ""
+msgstr "Este año calendario"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous week"
-msgstr ""
+msgstr "Semana anterior"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous calendar month"
-msgstr ""
+msgstr "Mes anterior"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous quarter"
-msgstr ""
+msgstr "Trimestre anterior"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous fiscal year"
-msgstr ""
+msgstr "Año fiscal anterior"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous calendar year"
-msgstr ""
+msgstr "Año calendario anterior"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 7 days including today"
-msgstr ""
+msgstr "Últimos 7 días incluyendo hoy"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 30 days including today"
-msgstr ""
+msgstr "Últimos 30 días incluyendo hoy"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 60 days including today"
-msgstr ""
+msgstr "Últimos 60 días incluyendo hoy"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 90 days including today"
-msgstr ""
+msgstr "Últimos 90 días incluyendo hoy"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 12 months including today"
-msgstr ""
+msgstr "Últimos 12 meses incluyendo hoy"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 2 years including today"
-msgstr ""
+msgstr "Últimos 2 años incluyendo hoy"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 3 years including today"
-msgstr ""
+msgstr "Últimos 3 años incluyendo hoy"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next week"
-msgstr ""
+msgstr "Siguiente semana"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next calendar month"
-msgstr ""
+msgstr "Siguiente mes calendario"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next quarter"
-msgstr ""
+msgstr "Siguiente trimestre"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next fiscal year"
-msgstr ""
+msgstr "Siguiente año fiscal"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next calendar year"
-msgstr ""
+msgstr "Siguiente año calendario"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next 7 days including today"
-msgstr ""
+msgstr "Siguientes 7 días incluyendo hoy"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next 30 days including today"
-msgstr ""
+msgstr "Siguientes 30 días incluyendo hoy"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next 60 days including today"
-msgstr ""
+msgstr "Siguientes 60 días incluyendo hoy"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next 90 days including today"
-msgstr ""
+msgstr "Siguientes 90 días incluyendo hoy"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next 12 months including today"
-msgstr ""
+msgstr "Siguientes 12 meses incluyendo hoy"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Current week to-date"
-msgstr ""
+msgstr "Esta semana hasta la fecha actual"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Current calendar month to-date"
-msgstr ""
+msgstr "Este mes hasta la fecha actual"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Current quarter to-date"
-msgstr ""
+msgstr "Este trimestra hasta la fecha actual"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Current calendar year to-date"
-msgstr ""
+msgstr "Este año calendario hasta la fecha"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of yesterday"
-msgstr ""
+msgstr "Hasta el fin de ayer"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of previous week"
@@ -26583,114 +26583,114 @@ msgstr "Hasta el fin del año natural anterior"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From start of current day"
-msgstr ""
+msgstr "Desde el comienzo del día actual"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From start of current week"
-msgstr ""
+msgstr "Desde el inicio de la semana actual"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From start of current calendar month"
-msgstr ""
+msgstr "Desde el inicio del mes mes actual"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From start of current quarter"
-msgstr ""
+msgstr "Desde el inicio del trimestre actual"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From start of current calendar year"
-msgstr ""
+msgstr "Desde el inicio del año calendario actual"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current week"
-msgstr ""
+msgstr "Hasta el fin de esta semana"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current calendar month"
-msgstr ""
+msgstr "Hasta el fin del mes actual"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current quarter"
-msgstr ""
+msgstr "Hasta el fin del trimestre  actual"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current calendar year"
-msgstr ""
+msgstr "Hasta el fin del año calendario actual"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous 2 days"
-msgstr ""
+msgstr "Últimos 2 días"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous 2 weeks"
-msgstr ""
+msgstr "Últimas 2 semanas"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous 2 calendar months"
-msgstr ""
+msgstr "Últimos 2 meses"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous 2 quarters"
-msgstr ""
+msgstr "Últimos 2 trimestres"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous 2 calendar years"
-msgstr ""
+msgstr "Últimos 2 años calendarios"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Day prior to yesterday"
-msgstr ""
+msgstr "Antes de ayer"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Week prior to previous week"
-msgstr ""
+msgstr "La semana anterior a la pasada"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Month prior to previous calendar month"
-msgstr ""
+msgstr "El mes anterior al pasado"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Quarter prior to previous quarter"
-msgstr ""
+msgstr "El trimestre anterior al pasado"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Year prior to previous calendar year"
-msgstr ""
+msgstr "Año anterior al pasado año calendario"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous week"
-msgstr ""
+msgstr "Desde el fin de la semana pasada"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous calendar month"
-msgstr ""
+msgstr "Desde el fin del mes pasado"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous quarter"
-msgstr ""
+msgstr "Desde el fin del trimestre anterior"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous calendar year"
-msgstr ""
+msgstr "Desde el fin del año calendario pasado"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
 "Date for activities including contributions: receive, receipt, cancel. "
 "membership: join, start, renew. case: start, end."
-msgstr ""
+msgstr "Fecha para las actividades incluyendo contribuciones: recibida, recibo, cancelar. Membresías: unirse, comienzo, renovación."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Date and time for activity: scheduled. participant: registered."
-msgstr ""
+msgstr "Fecha y hora para la actividad: programado. participante: registrado."
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
 "Birth and deceased dates. Only year, month and day fields are supported."
-msgstr ""
+msgstr "Fechas de nacimiento y defunción. Solo campos de día, mes y año están soportados."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Month and year only for credit card expiration."
-msgstr ""
+msgstr "Mes y año solo para el vencimiento de la tarjeta de crédito."
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
