po: update po/es_ES/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/admin.po
+++ b/po/es_ES/admin.po
@@ -32,7 +32,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-25 07:36+0000\n"
+"PO-Revision-Date: 2016-08-26 08:21+0000\n"
 "Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -648,7 +648,7 @@ msgid ""
 "You have enabled the County option. Please ensure you populate the county "
 "table in your CiviCRM Database. You can find extensions to populate counties"
 " in the <a %1>CiviCRM Extensions Directory</a>."
-msgstr "Se ha activado la opción de Condado. Por favor asegúrese de llenar la tabla del condado en su base de datos CiviCRM. Usted puede encontrar extensiones para poblar condados en el <a %1> CiviCRM Extensiones Directorio </a> ."
+msgstr "Se ha activado la opción de Condado. Por favor asegúrese de llenar la tabla del condado en su base de datos CiviCRM. Usted puede encontrar extensiones para poblar condados en el <a %1>Directorio de extensiones de CiviCRM </a> ."
 
 #: CRM/Admin/Form/Preferences/Address.php
 msgid "Populate counties"
@@ -717,7 +717,7 @@ msgstr "Introduzca nota o mensaje que se mostrará en el PDF de la factura o not
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Automatically email invoice when user purchases online"
-msgstr "Automáticamente enviar por correo electrónico la factura cuando el usuario realice la compra en línea."
+msgstr "Enviar automáticamente por correo electrónico la factura cuando el usuario realice la compra en línea."
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Tax Term"
@@ -805,7 +805,7 @@ msgstr "Entradas del panel de control"
 msgid ""
 "Configure how many events should be shown on the dashboard. This overrides "
 "the default value of 10 entries."
-msgstr "Configure el número de eventos a mostrar en el panel principal. Esto anula el valor predeterminado de 10 entradas."
+msgstr "Configure el número de eventos a mostrar en el panel de control. Esto anula el valor predeterminado de 10 entradas."
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "show all"
@@ -1086,7 +1086,7 @@ msgstr "La fecha absoluta no puede ser anterior a la fecha actual."
 msgid ""
 "If \"Also include\" or \"Limit to\" are selected, you must specify at least "
 "one %1"
-msgstr "Si \"También incluir\" o \"Limitar a\" se encuentran seleccionados, debe especificar al menos uno %1"
+msgstr "Si \"Incluir también\" o \"Limitar a\" se encuentran seleccionados, debe especificar al menos un %1"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Selected Reminder has been deleted."
@@ -1372,7 +1372,7 @@ msgstr "Reconocer Opciones"
 msgid ""
 "Maximum file size cannot exceed Upload max size ('upload_max_filesize') as "
 "defined in PHP.ini."
-msgstr "El tamaño máximo del archivo no puede exceder el tamaño máximo del fichero de subida, como se define en php.ini ."
+msgstr "El tamaño máximo del archivo no puede exceder el tamaño máximo del fichero de subida ('upload_max_filesize'), como se define en php.ini ."
 
 #: CRM/Admin/Form/Setting/Miscellaneous.php
 msgid "The wkhtmltodfPath does not exist or is not valid"
@@ -2316,7 +2316,7 @@ msgstr "¿Está seguro de que desea desconectar \"%1\"? Al realizar esto permane
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Disconnect"
-msgstr "Desconexión"
+msgstr "Desconectar"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "New Connections"
