po: update po/it_IT/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/event.po
+++ b/po/it_IT/event.po
@@ -5,6 +5,7 @@
 # Translators:
 # Alfredo Lucci <alfredolucci.al@gmail.com>, 2015
 # Francesco Moretto <francesco@moretto.it>, 2015
+# Johan Soderkvist <johansoderkvist@ikreativo.it>, 2016
 # mitch.camp <kal-el@hotmail.it>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # IAntichi <posta@circolodeiantichi.it>, 2014
@@ -14,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-26 09:03+0000\n"
+"Last-Translator: Johan Soderkvist <johansoderkvist@ikreativo.it>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -34,11 +35,11 @@ msgstr "Impossibile trovare l'ID del partecipante "
 
 #: CRM/Event/BAO/Participant.php
 msgid "This event is full."
-msgstr ""
+msgstr "Questo evento è al completo."
 
 #: CRM/Event/BAO/Participant.php
 msgid "- Participant Fields -"
-msgstr "- Campi Partecipanti -"
+msgstr "- Campi Partecipante -"
 
 #: CRM/Event/BAO/Participant.php
 msgid "Participant Note"
@@ -55,21 +56,21 @@ msgstr "ID Ruolo del partecipante"
 #: CRM/Event/BAO/Participant.php
 msgid ""
 "Participant status has been updated to '%1'. An email has been sent to %2."
-msgstr "Lo status dei partecipanti è stato aggiornato per  '%1'.  Una e-mail è stata inviata a %2."
+msgstr "Lo stato del partecipante è stato aggiornato per  '%1'.  Una e-mail è stata inviata a %2."
 
 #: CRM/Event/BAO/Participant.php
 msgid ""
 "This event currently has the maximum number of participants registered (%1)."
 " However, you can still override this limit and register additional "
 "participants using this form."
-msgstr "Questo evento ha attualmente il numero massimo di partecipanti iscritti (%1). Tuttavia, è ancora possibile annullare questo limite e registrare nuovi partecipanti utilizzando questo modulo."
+msgstr "Questo evento ha attualmente il numero massimo di partecipanti iscritti (%1). Tuttavia, è ancora possibile superare questo limite e registrare nuovi partecipanti utilizzando questo modulo."
 
 #: CRM/Event/BAO/Participant.php
 msgid ""
 "There are %2 people currently on the waiting list for this event. You can <a"
 " href='%1'>view waitlisted registrations here</a>, or you can continue and "
 "register additional participants using this form."
-msgstr ""
+msgstr "Al momento ci sono %2 persone sulla lista d'attesa per questo evento. Puoi <a href='%1'>vedere la lista d'attesa qui</a>, oppure continuare a registrare nuovi partecipanti usando questo modulo."
 
 #: CRM/Event/BAO/Query.php
 msgid "Include Repeating Events"
@@ -85,23 +86,23 @@ msgstr "Tipo di costo"
 
 #: CRM/Event/BAO/Query.php
 msgid "Include participants from all events in the %1 series"
-msgstr ""
+msgstr "Includi i partecipanti da tutti gli eventi della serie %1"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is a Test?"
-msgstr "Il partecipante è un test?"
+msgstr "Il partecipante è un Test?"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is Pay Later?"
-msgstr ""
+msgstr "Il partecipante è un Paga Più Tardi"
 
 #: CRM/Event/Cart/BAO/Cart.php
 msgid "There was an error creating an event cart"
-msgstr ""
+msgstr "Si è verificato un errore nel creare il carrello evento"
 
 #: CRM/Event/Cart/BAO/Cart.php
 msgid "Could not find cart matching %1"
-msgstr ""
+msgstr "Non ho trovato un carrello per %1"
 
 #: CRM/Event/Cart/BAO/EventInCart.php
 msgid "There was an error creating an event_in_cart"
@@ -121,17 +122,17 @@ msgstr "Se hai un codice sconto, inseriscilo qui"
 
 #: CRM/Event/Cart/Form/Checkout/ParticipantsAndPrices.php
 msgid "Select at least one option from Price Levels."
-msgstr ""
+msgstr "Seleziona almeno un opzione dalle Fascie di Prezzo"
 
 #: CRM/Event/Cart/Form/Checkout/ParticipantsAndPrices.php
 msgid ""
 "Price Levels can not be less than zero. Please select the options "
 "accordingly"
-msgstr ""
+msgstr "Le Fascie di Prezzo non possono essere inferiori a zero. Per favore seleziona una opzione."
 
 #: CRM/Event/Cart/Form/Checkout/ParticipantsAndPrices.php
 msgid "The participant %1 is already registered for %2 (%3)."
-msgstr ""
+msgstr "Il partecipante %1 è già registrato per %2 (%3)."
 
 #: CRM/Event/Cart/Form/Checkout/Payment.php
 msgid ""
@@ -152,23 +153,23 @@ msgstr "Pagamento completato"
 
 #: CRM/Event/Cart/Form/Checkout/Payment.php
 msgid "Complete Transaction"
-msgstr ""
+msgstr "Completa la Transazione"
 
 #: CRM/Event/Cart/Form/Checkout/Payment.php
 msgid "Alternative Payment Type"
-msgstr ""
+msgstr "Tipo di Pagamento Alternativo"
 
 #: CRM/Event/Cart/Form/Checkout/Payment.php
 msgid "Check No."
-msgstr ""
+msgstr "Assegno Nr."
 
 #: CRM/Event/Cart/Form/Checkout/Payment.php
 msgid "Create a pending registration"
-msgstr ""
+msgstr "Crea una registrazione in stato di attesa"
 
 #: CRM/Event/Cart/Form/Checkout/Payment.php
 msgid "Financial institution didn't return a transaction id."
-msgstr ""
+msgstr "L'istituto finanziario non ha restituito una id di transazione."
 
 #: CRM/Event/Cart/Form/Checkout/Payment.php
 msgid ""
@@ -187,23 +188,23 @@ msgstr "<b>%1</b> è stato aggiunto al carrello. <a href='%2'>Visualizza carrell
 
 #: CRM/Event/Cart/Page/RemoveFromCart.php
 msgid "<b>%1</b> has been removed from your cart."
-msgstr ""
+msgstr "<b>%1</b> è stato rimosso dal tuo carrello."
 
 #: CRM/Event/Cart/StateMachine/Checkout.php
 msgid "You don't have any events in you cart. Please add some events."
-msgstr ""
+msgstr "Non hai eventi nel tuo carrello. Per favore aggiungi qualche evento."
 
 #: CRM/Event/DAO/Event.php
 msgid "Is Event Public"
-msgstr "Evento pubblico"
+msgstr "E' Evento Pubblico"
 
 #: CRM/Event/DAO/Event.php
 msgid "Is Online Registration"
-msgstr "Registrazione online"
+msgstr "E' Registrazione Online"
 
 #: CRM/Event/DAO/Event.php
 msgid "Event Registration Link Text"
-msgstr "Testo link registrazione online"
+msgstr "Testo link Registrazione Evento Online"
 
 #: CRM/Event/DAO/Event.php CRM/Event/Form/ManageEvent/Registration.php
 msgid "Registration Start Date"
@@ -220,15 +221,15 @@ msgstr "Note Evento"
 
 #: CRM/Event/DAO/Event.php
 msgid "Is this a PAID event?"
-msgstr ""
+msgstr "Questo è un evento a PAGAMENTO?"
 
 #: CRM/Event/DAO/Event.php
 msgid "Map Enabled"
-msgstr ""
+msgstr "Cartina Abilitata"
 
 #: CRM/Event/DAO/Event.php
 msgid "show location"
-msgstr "mostra recapito"
+msgstr "mostra localizzazione"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role ID"
@@ -236,11 +237,11 @@ msgstr ""
 
 #: CRM/Event/DAO/Event.php
 msgid "Confirmation Title"
-msgstr "Titolo conferma"
+msgstr "Titolo Conferma"
 
 #: CRM/Event/DAO/Event.php
 msgid "Confirm Text"
-msgstr "Testo conferma"
+msgstr "Testo Conferma"
 
 #: CRM/Event/DAO/Event.php
 msgid "Is confirm email"
@@ -248,7 +249,7 @@ msgstr "Invia email conferma"
 
 #: CRM/Event/DAO/Event.php
 msgid "Confirmation Email Text"
-msgstr "Testo email conferma"
+msgstr "Testo Email Conferma"
 
 #: CRM/Event/DAO/Event.php CRM/Event/Form/ManageEvent/Registration.php
 msgid "Confirm From Name"
@@ -284,23 +285,23 @@ msgstr "Testo Ringraziamento"
 
 #: CRM/Event/DAO/Event.php
 msgid "Pay Later Allowed"
-msgstr ""
+msgstr "Paga più Tardi Permesso"
 
 #: CRM/Event/DAO/Event.php
 msgid "Pay Later Receipt Text"
-msgstr ""
+msgstr "Testo Ricevuta Paga più Tardi"
 
 #: CRM/Event/DAO/Event.php
 msgid "Partial Payments Enabled"
-msgstr ""
+msgstr "Pagamenti Parziali Attivi"
 
 #: CRM/Event/DAO/Event.php
 msgid "Minimum Initial Amount"
-msgstr ""
+msgstr "Importo Minimo Iniziale"
 
 #: CRM/Event/DAO/Event.php
 msgid "Allow Multiple Registrations"
-msgstr ""
+msgstr "Permetti Registrazioni Multiple"
 
 #: CRM/Event/DAO/Event.php
 msgid "Does Event allow multiple registrations from same email address?"
@@ -308,11 +309,11 @@ msgstr "L'Evento permette registrazioni multiple con lo stesso indirizzo di emai
 
 #: CRM/Event/DAO/Event.php
 msgid "Waitlist Enabled"
-msgstr ""
+msgstr "Lista d'Attesa Attiva"
 
 #: CRM/Event/DAO/Event.php
 msgid "Requires Approval"
-msgstr "Richiede l'approvazione"
+msgstr "Richiede l'Approvazione"
 
 #: CRM/Event/DAO/Event.php
 msgid "Expiration Time"
@@ -320,7 +321,7 @@ msgstr "Data di scadenza"
 
 #: CRM/Event/DAO/Event.php templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid "Waitlist Text"
-msgstr "Testo della Lista dei consentiti"
+msgstr "Testo della Lista d'Attesa"
 
 #: CRM/Event/DAO/Event.php
 msgid "Approval Req Text"
@@ -328,27 +329,27 @@ msgstr "Approvazione ddi richiesta el testo "
 
 #: CRM/Event/DAO/Event.php
 msgid "Is an Event Template"
-msgstr ""
+msgstr "E' un Modello di Evento"
 
 #: CRM/Event/DAO/Event.php
 msgid "Event Template Title"
-msgstr "Titolo del Template dell'Evento"
+msgstr "Titolo del Modello di Evento"
 
 #: CRM/Event/DAO/Event.php
 msgid "Created By Contact ID"
-msgstr ""
+msgstr "Creato Da ID Contatto"
 
 #: CRM/Event/DAO/Event.php
 msgid "Event Created Date"
-msgstr "Evento Data di Creazione"
+msgstr "Data di Creazione Evento"
 
 #: CRM/Event/DAO/Event.php
 msgid "Is the booking confirmation screen enabled?"
-msgstr ""
+msgstr "La schermata di conferma prenotazione è attiva?"
 
 #: CRM/Event/DAO/Event.php
 msgid "Parent Event ID"
-msgstr ""
+msgstr "ID Evento Padre"
 
 #: CRM/Event/DAO/Event.php
 msgid "Subevent Slot Label ID"
@@ -372,7 +373,7 @@ msgstr "Fonte Partecipante"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Registered By ID"
-msgstr "Registrato da ID"
+msgstr "Registrato Da ID"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Discount Amount"
@@ -1312,7 +1313,7 @@ msgid ""
 "No Fee Level(s) or Price Set is configured for this event.<br />Click <a "
 "href='%1'>CiviEvent >> Manage Event >> Configure >> Event Fees</a> to "
 "configure the Fee Level(s) or Price Set for this event."
-msgstr "Nessuna Fascia di Quota o Fascia di Prezzi è stata configurata per questo evento. <br />Clicca <a href='%1'>CiviEvent >> Gestione Eventi >> Configura >> Quote Eventi</a> per configurare le Quote o le Fascie di Prezzi per questo evento."
+msgstr "Non sono state configurate Fascie di Quota o Insieme di Prezzi per questo evento. <br />Clicca <a href='%1'>CiviEvent >> Gestione Eventi >> Configura >> Quote Eventi</a> per configurare le Quote o l'Insieme di Prezzi per questo evento."
 
 #: CRM/Event/Form/Registration.php
 msgid "Select at least one option from Event Fee(s)."
@@ -2093,7 +2094,7 @@ msgid ""
 "options for event registrants. Otherwise, select &quot;-none-&quot; and "
 "enter one or more fee levels in the table below. Create or edit Price Sets "
 "<a href='%1'>here</a>."
-msgstr "Seleziona una Fascia di Prezzi preconfigurata per offrire più opzioni di pagamento per i partecipanti all'evento. Altrimenti seleziona &quot;-nessuno-&quot; ed inserisci uno o più fasce di quote nella tabella qui sotto. Crea o modifica le Fascie di Prezzo <a href=\"%1\">qui</a>."
+msgstr "Seleziona un Insieme di Prezzi preconfigurato per offrire più opzioni di pagamento per i partecipanti all'evento. Altrimenti seleziona &quot;-nessuno-&quot; e inserisci una o più fasce di quota nella sottostante tabella. Crea o modifica gli Insiemi di Prezzo <a href=\"%1\">qui</a>."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid "Regular Fees"
@@ -2872,7 +2873,7 @@ msgid ""
 "a fundraising dinner. This registration will increment the 'actual "
 "participant count' by 8, even though only one participant record is "
 "displayed in search results."
-msgstr ""
+msgstr "Questo è visualizzato per gli eventi che usano campi di Insieme di Prezzo per incrementare il numero di partecipanti senza tenere conto del numero massimo di partecipanti impostato. Per esempio, qualcuno potrebbe selezionare un 'Tavolo per 8' quando si registra per una cena di raccolta fondi. Questa registrazione incrementerà la 'conta effettiva dei partecipanti' di 8, anche se nei risultati di ricerca sarà mostrato un solo record partecipante."
 
 #: templates/CRM/Event/Form/SearchEvent.tpl
 msgid "Find Events"
