--- a/po/fr_CA/admin.po
+++ b/po/fr_CA/admin.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # JeanBlais <velorutioneer@gmail.com>, 2014
+# lavamind <jerome@riseup.net>, 2016
 # lavamind <jerome@riseup.net>, 2011
 # JoeMurray <joe.murray@jmaconsulting.biz>, 2013
 # JoeMurray <joe.murray@jmaconsulting.biz>, 2013
@@ -22,8 +23,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-13 17:45+0000\n"
-"Last-Translator: Stéphane Lussier <stephane@symbiotic.coop>\n"
+"PO-Revision-Date: 2016-08-27 15:57+0000\n"
+"Last-Translator: lavamind <jerome@riseup.net>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6401,7 +6402,7 @@ msgstr "Documentation d'administration"
 
 #: templates/CRM/Admin/Page/Tag.tpl
 msgid "Add Tag"
-msgstr "jouter une étiquette"
+msgstr "Ajouter une étiquette"
 
 #: templates/CRM/Admin/Page/Tag.tpl
 msgid "Add Tag Set"
