--- a/po/hi_IN/admin.po
+++ b/po/hi_IN/admin.po
@@ -5,12 +5,13 @@
 # Translators:
 # girdhari rao <girdhariworld@gmail.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Vivek Raj <vivek12120@iiitd.ac.in>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-28 08:35+0000\n"
+"Last-Translator: Vivek Raj <vivek12120@iiitd.ac.in>\n"
 "Language-Team: Hindi (http://www.transifex.com/civicrm/civicrm/language/hi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -281,7 +282,7 @@ msgstr ""
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Used For?"
-msgstr ""
+msgstr "के लिए इस्तेमाल किया?"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid ""
@@ -376,7 +377,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Options.php templates/CRM/Admin/Page/Options.tpl
 msgid "Status Class"
-msgstr ""
+msgstr "स्थिति क्लास"
 
 #: CRM/Admin/Form/Options.php
 msgid "Regular Expression?"
@@ -384,7 +385,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Options.php
 msgid "Class Name"
-msgstr ""
+msgstr "क्लास नाम"
 
 #: CRM/Admin/Form/Options.php
 msgid "Contacts AND Cases"
@@ -585,11 +586,11 @@ msgstr ""
 
 #: CRM/Admin/Form/Persistent.php
 msgid "Name:"
-msgstr ""
+msgstr "नाम"
 
 #: CRM/Admin/Form/Persistent.php
 msgid "Data:"
-msgstr ""
+msgstr "डेटा"
 
 #: CRM/Admin/Form/Persistent.php
 msgid "DB Template has been added successfully."
@@ -969,7 +970,7 @@ msgstr ""
 #: CRM/Admin/Form/RelationshipType.php
 #: templates/CRM/Admin/Page/RelationshipType.tpl
 msgid "All Contacts"
-msgstr ""
+msgstr "सब सदस्य"
 
 #: CRM/Admin/Form/RelationshipType.php
 msgid "Selected Relationship type has been deleted."
