po: update po/es_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/common-base.po
+++ b/po/es_ES/common-base.po
@@ -42,7 +42,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-26 16:11+0000\n"
+"PO-Revision-Date: 2016-08-29 15:41+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -163,7 +163,7 @@ msgstr "Todo"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL ID"
-msgstr "Identificador de la LCA"
+msgstr "ID de ACL"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Name"
@@ -171,7 +171,7 @@ msgstr "Nombre ACL"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "Deny ACL?"
-msgstr "¿Negar ACL? "
+msgstr "¿Denegar ACL? "
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Entity"
@@ -192,7 +192,7 @@ msgstr "Objeto ACL "
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Object ID"
-msgstr "Objeto ACL de identificación"
+msgstr "Identificación de objeto ACL"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Table"
@@ -200,7 +200,7 @@ msgstr "Tabla ACL"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Group ID"
-msgstr "Identificador del grupo ACL "
+msgstr "ID del grupo ACL "
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Is Active?"
@@ -217,7 +217,7 @@ msgstr "Rol de entidad"
 
 #: CRM/ACL/DAO/EntityRole.php
 msgid "ACL Role ID"
-msgstr "ACL rol de identificación"
+msgstr "ID del rol ACL"
 
 #: CRM/ACL/DAO/EntityRole.php CRM/Core/DAO/ActionLog.php
 #: CRM/Core/DAO/Discount.php CRM/Core/DAO/EntityFile.php
@@ -231,7 +231,7 @@ msgstr "Tabla de Entidad"
 
 #: CRM/ACL/DAO/EntityRole.php
 msgid "ACL Entity ID"
-msgstr "Entidad ACL de membresía "
+msgstr "ID de la entidad ACL"
 
 #: CRM/ACL/DAO/EntityRole.php
 msgid "ACL Entity Role is Active"
@@ -26696,42 +26696,42 @@ msgstr "Mes y año solo para el vencimiento de la tarjeta de crédito."
 msgid ""
 "Uses date range passed in by form field. Can pass in a posix date part "
 "parameter. Start and end offsets defined here are ignored."
-msgstr ""
+msgstr "Utiliza el rango de fechas pasado en en un campo de un formulario. Se puede pasar como parte de un parámetro con formato fecha posix."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Date and time. Used for scheduling mailings."
-msgstr ""
+msgstr "Hora y fecha. Utilizado para programar envíos masivos de correos."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Used in search forms and for relationships."
-msgstr ""
+msgstr "Utilizado en formularios de búsqueda y para relaciones."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pending (pay later)"
-msgstr ""
+msgstr "Pendiente (pago diferido)"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pending (incomplete transaction)"
-msgstr ""
+msgstr "Pendiente (transacción incompleta)"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Transferred"
-msgstr ""
+msgstr "Transferido"
 
 #: xml/templates/civicrm_data.tpl
 msgid "CiviCRM Update Check"
-msgstr ""
+msgstr "Verificación actualización CiviCRM"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
 "Checks for CiviCRM version updates. Important for keeping the database "
 "secure. Also sends anonymous usage statistics to civicrm.org to to assist in"
 " prioritizing ongoing development efforts."
-msgstr ""
+msgstr "Comprueba actualizaciones de CiviCRM. Esto es importante para mantener la base de datos segura. También envía estadísticas anónimas de uso a civicrm.org para ayudar a priorizar los esfuerzos de desarrollo que hay en marcha."
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Events - Registration Transferred Notice"
-msgstr ""
+msgstr "Eventos - Aviso de transferencia de registro"
 
 #: CRM/Upgrade/Form.php
 msgid ""
@@ -26739,14 +26739,14 @@ msgid ""
 " will need to be done in stages. First download an intermediate version (the"
 " LTS may be a good choice) and upgrade to that before proceeding to this "
 "version."
-msgstr ""
+msgstr "Las versiones de CiviCRM anteriores a %1 no pueden ser actualizadas directamente a %2. Esta actualización requiere hacerse en etapas. Primero debe descargarse una versión intermedia (preferentemente versión LTS) y realizar una actualización antes de pasar a esta versión."
 
 #: CRM/Upgrade/Incremental/General.php
 msgid ""
 "This webserver is running an outdated version of PHP (%1). It is strongly "
 "recommended to upgrade to PHP %2 or later, as older versions can present a "
 "security risk."
-msgstr ""
+msgstr "Este servidor web está ejecutando una versión desactualizada de PHP (%1). Se recomienda actualizar a PHP %2 o posterior. Las versiones anteriores pueden presentar riesgos de seguridad."
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid ""
@@ -26754,33 +26754,33 @@ msgid ""
 "You are currently using this custom template: %1 . Following the upgrade you"
 " will need to use the standard approach to overriding template files, as "
 "described in the documentation."
-msgstr ""
+msgstr "La configuración de la plantilla de error fatal a medida será eliminada durante la actualización. Está utilizando actualmente la plantilla a medida: %1. Luego de actualizar, deberá utilizar el enfoque estándar para sobreescribir los ficheros de plantilla, tal y como se describe en la documentación."
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid ""
 "The %1 payment processor is no longer bundled with CiviCRM. After upgrading "
 "you will need to install the extension to continue using it."
-msgstr ""
+msgstr "El procesador de pagos %1 no está precargado en CiviCRM. Luego de actualizar, deberá instalar la extensión correspondiente para continuar utilizándolo."
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid ""
 "Your configured editor \"TinyMCE\" is no longer part of the main CiviCRM "
 "download. To continue using it, visit the <a %1>Manage Extensions</a> page "
 "to download and install the TinyMCE extension."
-msgstr ""
+msgstr "El editor \"TinyMCE\" no forma más parte de la descarga principal de CiviCRM. Para continuar utilizándolo, visite la página de <a %1>Gestionar extensiones</a> para descargar e instalar el editor TinyMCE."
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid ""
 "CiviCRM no longer integrates with the \"%1 Default Editor.\" Your wysiwyg "
 "setting has been reset to the built-in CKEditor. <a %2>Learn more...</a>"
-msgstr ""
+msgstr "CiviCRM no se integra más con el editor \"%1 editor por defecto\". Su configuración wysiwyg ha sido revertida al editor embebido CKEditor. <a %2>Más información...</a>"
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid ""
 "CiviCRM now includes the easy-to-use CKEditor Configurator. To customize the"
 " features and display of your wysiwyg editor, visit the <a %1>Display "
 "Preferences</a> page. <a %2>Learn more...</a>"
-msgstr ""
+msgstr "CiviCRM ahora incluye un configurador de CKEditor fácil de utilizar. Para ajustar las funcionalidades y cómo se muestra el editor wysiwyg visite la página de <a %1>Preferencias de visualización</a>. <a %2> Más información...</a>"
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid ""
@@ -26789,12 +26789,12 @@ msgid ""
 " you have modified these templates, please review the new default versions "
 "and implement updates as needed to your copies (Administer > Communications "
 "> Message Templates > System Workflow Messages)."
-msgstr ""
+msgstr "Las versiones por defecto de las siguientes plantillas de mensajes de flujo de trabajo del sistema han sido modificadas: <ul><li>Página de campaña personal - Notificación del dueño</li></ul> Si ha modificado estas plantillas, por favor revise las nuevas versiones por defecto y actualice sus copias según vea necesario (Administrar > Comunicaciones > Plantillas de mensaje > Mensajes de flujo de trabajo de sistema)."
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "The custom fatal error template setting has been removed."
-msgstr ""
+msgstr "La plantilla a medida de error fatal ha sido eliminada."
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Migrate Settings to %1"
-msgstr ""
+msgstr "Migrar configuraciones a %1"
