po: update po/es_ES/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/menu.po
+++ b/po/es_ES/menu.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Adrian Torralba Roman <adriantorralba@hotmail.com>, 2016
 # ixiam <info@ixiam.com>, 2013
 # Fernando <badeaselche@hotmail.com>, 2012
 # Carlos Capote <carloscapote@masticable.org>, 2012-2013
@@ -26,8 +27,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-19 15:49+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-08-29 11:56+0000\n"
+"Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -957,7 +958,7 @@ msgstr "Importar Actividades"
 
 msgctxt "menu"
 msgid "Import Multi-value Custom Data"
-msgstr "Importar campos personalizados multi-valor"
+msgstr "Importar datos personalizados multi-valor"
 
 msgctxt "menu"
 msgid "Upgrade CiviCRM"
@@ -1574,7 +1575,7 @@ msgstr "Consola de Administración"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Customize Data and Screens"
-msgstr "Pantallas y campos personalizados"
+msgstr "Pantallas y datos personalizados"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
