po: update po/fr_CA/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/batch.po
+++ b/po/fr_CA/batch.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"PO-Revision-Date: 2016-08-29 16:59+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -91,15 +91,15 @@ msgstr "Date de modification du lot"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Smart Group"
-msgstr ""
+msgstr "Traitement par lots dynamique"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Total"
-msgstr ""
+msgstr "Total par lot"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Number of Items"
-msgstr ""
+msgstr "Nombre d'éléments dans le groupe"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Payment Instrument"
@@ -151,7 +151,7 @@ msgstr "Type d'adhésion est un champ obligatoire."
 
 #: CRM/Batch/Form/Entry.php
 msgid "You can not record two payments for the same pledge in a single batch."
-msgstr ""
+msgstr "Vous ne pouvez pas enregistrer deux paiements pour un engagement identique dans le même traitement par lots."
 
 #: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
 msgid ""
